# Webhook-Spammer

./: Cargo.toml  README.md
Dolphin/: Cargo.toml  LICENSE
Dolphin/src/: main.rs
DolphinWithConfig/: Cargo.toml  config.json
DolphinWithConfig/src/: main.rs
src/: main.rs  misc.rs  webhook.rs
src/config/: config.rs
src/misc/: banner.rs  clear.rs  help.rs  motd.rs
src/webhook/: hookcheck.rs  hookdelete.rs  hookfile.rs  hookspam.rs
