[package]
name = "dolphin"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16 = "0.2"
colored = "2"
colorful = "0.2.1"
dirs = "4.0.0"
hyper = "0.13.5"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.5", features = ["json", "blocking", "multipart"] }
serde = "1.0.130"
serde_json = "1.0"
serenity = "0.10.9"
#termion = "1.5.6"
tokio = { version = "1.14.0", features = ["full"] }
tokios = { git = "https://github.com/Pikkel/tokio", version = "1.14.0", features = ["full"] }
webbrowser = "0.5.5"
zip = "0.5.13"

[profile.release]
opt-level = 3
