[package]
name = "dolphin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorful = "0.2.1"
reqwest = { version = "0.11.5", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
webbrowser = "0.5.5"